@@ -1,12 +1,16 @@
 ???? 0.9.15
     user visible changes, client & admin:
     * Imporved help text for many commands,
+    * New variable syntax  $(A<B:b, C:c>)  to allow "scoped" resolving. This is similiar to function calls.
+    * New interactive command: resolvel calls resolve_to_list.
 
     programmer visible changes:
     * New yaml doc formats can be handled by methods named after the format,
         read_help for example will read !help documents.
     * Allow usage of variables in help text.
-
+    * New method ConfigVarList.extend to create variables from a dictionary of values.
+    * ConfigVarList can be initialized with a dictionary of values.
+    * ConfigVarStack can resolve $(A<B:b, C:c>) style varaibles.
 24/6/2014 0.9.14   Shai Shasag <shai@waves.com>
 
      user visible changes, client:
